Update security v2